--- a/Server/Dockerfile
+++ b/Server/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:22.04
+FROM ubuntu:latest
 ENV USER server
 RUN apt-get update
 RUN echo 'root:root123@' | chpasswd
@@ -51,13 +51,22 @@ RUN rm index.html
 WORKDIR "/"
 
 #Install mysql
-RUN echo "y" | apt-get install mysql-server
+RUN echo "y" | apt-get install mysql-client
+RUN echo "y" | apt-get install php-mysql
+
+#Install cron
+RUN echo "y" | apt-get install cron
+
+#Install nano
+RUN apt-get install -y nano
 
 #Setup mysql
-RUN service mysql restart && echo "ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password by 'root123@';" | mysql -u root -p
-ADD mysql_secure_installation.sh /root/mysql_secure_installation.sh
-RUN chmod +x /root/mysql_secure_installation.sh
-RUN ./root/mysql_secure_installation.sh 'root123@' 'root123@'
+#ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password by 'root123@';
+#CREATE DATABASE ssh_cmd_exec_app;
+#USE ssh_cmd_exec_app;
+#CREATE TABLE `command_history` (`id` INT NOT NULL AUTO_INCREMENT, `date` datetime NOT NULL DEFAULT CURRENT_TIMESTAMP, `machine_name` VARCHAR(255) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL,	`command` VARCHAR(255) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL,	`result` BOOLEAN NOT NULL, `output` TEXT CHARACTER SET utf8 COLLATE utf8_general_ci DEFAULT NULL COMMENT 'Output of the executed command.', `message` TEXT CHARACTER SET utf8 COLLATE utf8_general_ci DEFAULT NULL COMMENT 'Error message of the executed command.', PRIMARY KEY (`id`));
+#CREATE TABLE `machines` (`machine_name` VARCHAR(255) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL, PRIMARY KEY (`machine_name`));
+#CREATE TABLE `cron_jobs` (`cron_id` int(11) NOT NULL AUTO_INCREMENT, `job` varchar(255) CHARACTER SET utf8 NOT NULL, `machine` varchar(255) CHARACTER SET utf8 NOT NULL, PRIMARY KEY (`cron_id`));
 
 #Add the files to server
 ADD apache2.conf /etc/apache2/apache2.conf
@@ -65,9 +74,10 @@ ADD .htaccess /var/www/html/.htaccess
 ADD index.php /var/www/html/index.php
 ADD exec.php /var/www/html/exec.php
 ADD machines.php /var/www/html/machines.php
+ADD database.php /var/www/html/database.php
 
 #Enable mod_rewrite
 RUN a2enmod rewrite
 
 EXPOSE 22
-ENTRYPOINT service ssh restart && service apache2 restart && service mysql restart && bash
+ENTRYPOINT service ssh restart && service apache2 restart && service cron restart && bash
