Added rabbitmq, related packages, new files

--- a/Server/Dockerfile
+++ b/Server/Dockerfile
@@ -1,5 +1,6 @@
 FROM ubuntu:latest
 ENV USER server
+ENV PASSWORD 123456
 RUN apt-get update
 RUN echo 'root:root123@' | chpasswd
 
@@ -20,10 +21,12 @@ RUN mkdir /var/run/sshd
 RUN chmod 0755 /var/run/sshd
 RUN /usr/sbin/sshd
 RUN useradd --create-home --shell /bin/bash --groups sudo $USER
-RUN echo "$USER:123456" | chpasswd
+RUN echo "$USER:$PASSWORD" | chpasswd
 
 #Setup the apache server
 RUN service apache2 start
+RUN echo "ServerName localhost" | tee /etc/apache2/conf-available/servername.conf
+RUN a2enconf servername
 RUN chown -R www-data:www-data /var/www/html
 
 #Install composer
@@ -34,6 +37,7 @@ RUN php -r "unlink('composer-setup.php');"
 RUN mv composer.phar /usr/local/bin/composer
 
 #Install git and zip for slim
+RUN apt-get update
 RUN echo "y" | apt-get install git
 RUN echo "y" | apt-get install zip
 
@@ -47,6 +51,17 @@ RUN composer require nyholm/psr7 nyholm/psr7-server
 #Install basepath
 RUN composer require selective/basepath
 
+#Install php-mbstring
+RUN echo "y" | apt-get install php-mbstring
+
+#Install php-bcmath
+RUN echo "y" | apt-get install php-bcmath
+
+#Install amqplib
+RUN composer require php-amqplib/php-amqplib:">=3.1"
+
+RUN composer update
+
 #Delete file
 RUN rm index.html
 
@@ -56,30 +71,27 @@ WORKDIR "/"
 RUN echo "y" | apt-get install mysql-client
 RUN echo "y" | apt-get install php-mysql
 
+#Install rabbitmq-server
+RUN echo "y" | apt-get install rabbitmq-server
+
 #Install cron
 RUN echo "y" | apt-get install cron
 
 #Install nano
 RUN apt-get install -y nano
 
-#Setup mysql
-#ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password by 'root123@';
-#CREATE DATABASE ssh_cmd_exec_app;
-#USE ssh_cmd_exec_app;
-#CREATE TABLE `command_history` (`command_id` INT NOT NULL AUTO_INCREMENT, `date` datetime NOT NULL DEFAULT CURRENT_TIMESTAMP, `machine_name` VARCHAR(255) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL,	`command` VARCHAR(255) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL, `runned_by` VARCHAR(255) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL,	`result` BOOLEAN NOT NULL, `output` TEXT CHARACTER SET utf8 COLLATE utf8_general_ci DEFAULT NULL COMMENT 'Output of the executed command.', `message` TEXT CHARACTER SET utf8 COLLATE utf8_general_ci DEFAULT NULL COMMENT 'Error message of the executed command.', PRIMARY KEY (`command_id`));
-#CREATE TABLE `machines` (`machine_name` VARCHAR(255) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL, PRIMARY KEY (`machine_name`));
-#CREATE TABLE `cron_jobs` (`cron_id` int(11) NOT NULL AUTO_INCREMENT, `machine_name` varchar(255) CHARACTER SET utf8 NOT NULL, `schedule` varchar(255) CHARACTER SET utf8 NOT NULL, `command` varchar(255) CHARACTER SET utf8 NOT NULL, `last_runned_command_id` INT DEFAULT NULL COMMENT 'Last runned commands id from command_history.', PRIMARY KEY (`cron_id`));
-
 #Add the files to server
 ADD apache2.conf /etc/apache2/apache2.conf
 ADD .htaccess /var/www/html/.htaccess
 ADD index.php /var/www/html/index.php
 ADD exec.php /var/www/html/exec.php
-ADD machines.php /var/www/html/machines.php
 ADD database.php /var/www/html/database.php
+ADD cron.php /var/www/html/cron.php
+ADD queue_publisher.php /var/www/html/queue_publisher.php
+ADD queue_consumer.php /var/www/html/queue_consumer.php
 
 #Enable mod_rewrite
 RUN a2enmod rewrite
 
 EXPOSE 22
-ENTRYPOINT service ssh restart && service apache2 restart && service cron restart && bash
+ENTRYPOINT service ssh restart && service apache2 restart && service cron restart && service rabbitmq-server restart && (php /var/www/html/queue_consumer.php >> /var/www/html/log.txt &) && bash
